Chore: Add new variables in .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,7 @@ DB_NAME=H2Now
 TEST_PASSWORD=
 SECRET_KEY=
 VITE_API_URL=http://localhost:5000
+PUBLISH_KEY=
+SUBSCRIBE_KEY=
+PUBNUB_UUID=
+PUBNUB_CHANNEL=
