--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
+# .env
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
@@ -9,3 +10,6 @@ PUBLISH_KEY=
 SUBSCRIBE_KEY=
 PUBNUB_UUID=
 PUBNUB_CHANNEL=
+
+# .env.production
+VITE_API_URL=
