--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
+# .env
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
@@ -10,3 +11,6 @@ SUBSCRIBE_KEY=
 PUBNUB_UUID=
 PUBNUB_CHANNEL=
 FRONTEND_PUBNUB_CHANNEL=
+
+# .env.production
+VITE_API_URL=
