Chore: Update .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,20 +1,13 @@
-# .env
+PUBLISH_KEY=
+SUBSCRIBE_KEY=sub-c-3d9cff1c-8165-4a39-abe0-b5a9a6e36d76
+PUBNUB_UUID=
+PUBNUB_CHANNEL=raw_bottle_data
+BOTTLE_ID=
 DB_HOST=localhost
-DB_USER=root
+DB_USER=
 DB_PASSWORD=
 DB_NAME=H2Now
 TEST_PASSWORD=
 SECRET_KEY=
-VITE_API_URL=http://localhost:5000
-PUBLISH_KEY=
-SUBSCRIBE_KEY=
-PUBNUB_UUID=
-PUBNUB_CHANNEL=
-FRONTEND_PUBNUB_CHANNEL=
-
-# .env.production
-VITE_API_URL=
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=
+FRONTEND_PUBNUB_CHANNEL=clean_bottle_data
+SESSION_FILE_DIR=./flask_session=
