refactor: minor changes to .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,17 +4,11 @@ DB_USER=root
 DB_PASSWORD=
 DB_NAME=H2Now
 TEST_PASSWORD=
+SESSION_FILE_DIR=./flask_session
 SECRET_KEY=
 VITE_API_URL=http://localhost:5000
 PUBLISH_KEY=
 SUBSCRIBE_KEY=
-PUBNUB_UUID=
+BOTTLE_ID=
 PUBNUB_CHANNEL=
 FRONTEND_PUBNUB_CHANNEL=
-
-# .env.production
-VITE_API_URL=
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=
